# SolfeggioProcessor

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SolfeggioIPlug.h  SolfeggioProcessor.h  build_windows.bat  build_windows.ps1  main.h
.github/workflows/: build.yml
CMake/: EmbedIcon.cmake
Source/: LookAndFeel.h  PluginEditor.cpp  PluginEditor.h  SolfeggioProcessor.cpp  SolfeggioProcessor.h  SpectrumAnalyzer.h
Source/Core/: Constants.h  LookAndFeel.h  WindowsIconHelpers.h
Source/DSP/: SidechainCompressor.cpp  SidechainCompressor.h  SmartAutoEngine.cpp  SmartAutoEngine.h  SolfeggioEngine.cpp  SolfeggioEngine.h
Source/GUI/: AutoModeBar.h  FrequencyControl.h  FrequencyGrid.h  PluginEditor.cpp  PluginEditor.h  SpectrumAnalyzer.h
Source/Plugin/: SolfeggioProcessor.cpp  SolfeggioProcessor.h
scripts/: build_linux.sh  build_macos.sh  build_windows.bat  build_windows.ps1  generate_icon_assets.py
src/: SolfeggioNIH.rs
